# warmaggedon

./: .gitignore  icon.svg.import  project.godot
backend/: Cargo.toml
backend/src/: main.rs
backend/src/controllers/: mod.rs  room_controller.rs  ws_controller.rs
backend/src/types/: chat.rs  mod.rs  state.rs
network/: http_service.gd  ws_service.gd
network/chat/: chat_handshake.gd  chat_message.gd
scenes/: main.tscn
ui/: main_menu.tscn
ui/components/: input.tscn  room_connect.gd  room_connect.tscn
